--- a/index.html
+++ b/index.html
@@ -10,24 +10,31 @@
   <body>
     <header>
       <h1>RPG Creature Search</h1>
-      <p>All creature data is retrieved from freeCodeCamp's <a href="https://rpg-creature-api.freecodecamp.rocks/">RPG Creature API</a></p>
-      <p>Enter a valid creature name or id to load it's stats.</p>
+      <p>All creature data is retrieved from freeCodeCamp's <a target="_blank" href="https://rpg-creature-api.freecodecamp.rocks/">RPG Creature API</a></p>
+      <p>Enter a valid creature name or ID to load its stats.</p>
+      <br>
     </header>
     <main>
       <input type="text" id="search-input" required>
       <button id="search-button">Search</button>
       <div id="creature-stats" class="creature-stats">
-        <span id="creature-name" class="stat">temp-name</span>
-        <span id="creature-id" class="stat">temp-id</span>
-        <span id="weight" class="stat">temp-wt</span>
-        <span id="height" class="stat">temp-ht</span>
-        <span id="types" class="stat">temp-type</span>
-        <span id="hp" class="stat">temp-hp</span>
-        <span id="attack" class="stat">temp-atk</span>
-        <span id="defense" class="stat">temp-def</span>
-        <span id="special-attack" class="stat">temp-spAtk</span>
-        <span id="special-defense" class="stat">temp-spDef</span>
-        <span id="speed" class="stat">temp-speed</span>
+        <span class="top-line">
+          <p class="stat-label">Name: <span id="creature-name" class="stat"></span></p>
+          <span id="types" class="stat types"></span>
+        </span>
+        <p class="stat-label">ID: <span id="creature-id" class="stat"></span></p>
+        
+        <p class="stat-label">Weight: <span id="weight" class="stat"></span></p>
+        <p class="stat-label">Height: <span id="height" class="stat"></span></p>
+      </div>
+      <br>
+      <div class="attributes">
+        <p class="stat-label">HP: <span id="hp" class="stat"></span></p>
+        <p class="stat-label">Attack: <span id="attack" class="stat"></span></p>
+        <p class="stat-label">Defense: <span id="defense" class="stat"></span></p>
+        <p class="stat-label">Special Attack: <span id="special-attack" class="stat"></span></p>
+        <p class="stat-label">Special Defense: <span id="special-defense" class="stat"></span></p>
+        <p class="stat-label">Speed: <span id="speed" class="stat"></span></p>
       </div>
     </main>
   </body>
